--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -10,7 +10,7 @@
       "resolved": "/usr/local/lib/node_modules/generator-fountain-webapp/node_modules/generator-fountain-angular1/generators/app/index.js",
       "namespace": "fountain-angular1:app",
       "_": [],
-      "sample": "techs",
+      "sample": "hello",
       "router": "none"
     }
   }
